--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+:root {
+  --Background-color: hsl(30, 54%, 90%);
+  --White: hsl(0, 0%, 100%);
+  --Rose-White: hsl(330, 100%, 98%);
+  --Light-Grey: hsl(30, 18%, 87%);
+  --Wenge-Brown: hsl(30, 10%, 34%);
+  --Dark-Charcoal: hsl(24, 5%, 18%);
+  --Nutmeg: hsl(14, 45%, 36%);
+  --Dark-Raspberry: hsl(332, 51%, 32%);
+  --border-radius: 10px;
+}
+
 @font-face {
   font-family: "outfit";
   src: url(./assets/fonts/outfit/Outfit-VariableFont_wght.ttf);
@@ -8,10 +20,22 @@
 }
 
 body {
-  background-color: hsl(30, 54%, 90%);
+  background-color: var(--Background-color);
   font-family: "outfit", sans-serif;
   font-size: 16px;
 }
+.card {
+  margin: 50px auto;
+  border: 0px;
+  width: 60%;
+  background-color: var(--White);
+  color: var(--Wenge-Brown);
+  border-radius: 15px;
+}
+.card h1 {
+  color: var(--Dark-Charcoal);
+}
+
 h1,
 h2,
 h3,
@@ -20,6 +44,10 @@ h5,
 h6 {
   font-family: "young-serif", sans-serif;
   font-weight: 400;
+}
+
+h2 {
+  color: var(--Nutmeg);
 }
 
 .attribution {
@@ -33,12 +61,20 @@ img {
   width: 90%;
   display: block;
   margin: 20px auto;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
 }
 
-.card {
-  margin: 50px auto;
-  border: 0px;
+.preparation-time {
+  background-color: var(--Rose-White);
+  padding: 20px;
+  margin: 20px 20px;
+  border-radius: var(--border-radius);
+}
+.preparation-time h2 {
+  color: var(--Dark-Raspberry);
+  font-family: "outfit", sans-serif;
+  font-weight: 600;
+  font-size: 21px;
 }
 
 h1 {
