--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,13 @@ body {
   font-size: 16px;
 }
 .card {
-  margin: 50px auto;
+  margin: 100px auto;
   border: 0px;
-  width: 60%;
+  width: 65%;
   background-color: var(--White);
   color: var(--Wenge-Brown);
   border-radius: 15px;
+  padding: 15px;
 }
 .card h1 {
   color: var(--Dark-Charcoal);
@@ -58,9 +59,8 @@ h2 {
   color: hsl(228, 45%, 44%);
 }
 img {
-  width: 90%;
+  width: 100%;
   display: block;
-  margin: 20px auto;
   border-radius: var(--border-radius);
 }
 
@@ -79,4 +79,33 @@ img {
 
 h1 {
   font-family: "young-serif";
+  margin-top: 30px;
+}
+.nutritions {
+  margin: 30px;
+}
+
+.nutritions .amount {
+  color: var(--Nutmeg);
+  font-weight: 600;
+}
+@media (max-width: 576px) {
+  .container {
+    margin: 0;
+  }
+  .card {
+    margin: 0;
+    width: 100%;
+    border-radius: 0;
+    padding: 0;
+  }
+  .card-body {
+    padding: 0;
+  }
+  .col-12 {
+    padding: 0;
+  }
+  .col-sm-12 {
+    padding: 0;
+  }
 }
